--- a/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
+++ b/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
@@ -101,7 +101,7 @@ S ta tri koraka završen je postupak induciranog sortiranja koji predstavlja sre
 Sada kada smo pogledali sve korake algoritma zasebno, rezimirajmo cjelokupni algoritam još jednom. U prvom koraku je potrebno odrediti tipove svih znakova (da li je znak l-znak ili s-znak), kao i koji su znakovi LMS-znakovi. Drugi korak algoritma je provođenje induciranog sortiranja nad ulaznim nizom. Time smo dobili međusobno sortirane LMS-nizove, no bitno je za zapamtiti da su sortirani samo oni koji su međusobno u potpunosti različiti. Ukoliko je dva ili više LMS-niza u potpunosti jednako (po jednakosti definiranoj ranije), onda ovim korakom nije jednoznačno određeno koji je od tih LMS-nizova nizova manji a koji veći. Kako bi odredili poredak LMS-nizova potrebno ih je ponovo sortirati, i to radimo tako da sve LMS-nizove zamijenimo leksikografskim znakovima po principu da LMS-nizovi koji se u sortiranom poretku pojavljuju ranije dobe manje leksikografkse znakove, jednakim LMS-nizovima pridjele se jednaki leksikografksi znakovi i onim LMS-znakovima koji se pojavljuju kasnije pridjele veće leksičke vrijednosti. Time smo stvorili novi, reducirani, problem koji možemo riješiti istim postupkom kao i originalni problem. Kada je riješen ovaj reducirani problem, jednoznačno nam je određen poredak LMS-nizova, i sada ukoliko provedemo ponovno inducirano sortiranje, dobit ćemo sufiksno polje.
 
 
-Kao što vidimo radi se o vrlo jednostavnom, konciznom i elegantnom algoritmu koji u linearnom vremenu može izgraditi sufiksno polje. Teoretski, memorijsko zauzeće algoritma je $O(5n)$, no u implementaciji ono je obično oko $O(6n)$ zbog dodatnih struktura koje su potrebne za rad algoritma (primjerice polje koje sadrži tipove svih znakova kako se ono ne bi moralo ponovo određivati u pojedinim koracima algoritma). Možda se kao jedna zamjerka algoritma može učiniti to što je potrebno raditi rekurzivne pozive tijekom rješavanja problema, no to nije toliki problem koliki se čini jer je obično broj rekurzivnih poziva dosta malen.
+Kao što vidimo radi se o vrlo jednostavnom, konciznom i elegantnom algoritmu koji u linearnom vremenu može izgraditi sufiksno polje. Teoretski, memorijsko zauzeće algoritma je $O(5n)$, no u implementaciji ono je obično nešto veće zbog dodatnih struktura koje su potrebne za rad algoritma (primjerice polje koje sadrži tipove svih znakova kako se ono ne bi moralo ponovo određivati u pojedinim koracima algoritma). Možda se kao jedna zamjerka algoritma može učiniti to što je potrebno raditi rekurzivne pozive tijekom rješavanja problema, no to nije toliki problem koliki se čini jer je obično broj rekurzivnih poziva dosta malen, čak i za veće nizove.
 
 
 \section{Wavelet stablo}
