--- a/documentation/LaTeX dokumentacija/Dokumentacija.tex
+++ b/documentation/LaTeX dokumentacija/Dokumentacija.tex
@@ -21,8 +21,7 @@
 \usepackage{algorithmic}
 \usepackage{algorithm}
 \usepackage{listings}
-
-
+\usepackage[skip=2pt,font=footnotesize]{caption}
 
 
 \renewcommand{\labelitemi}{$\bullet$}
