--- a/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
+++ b/documentation/LaTeX dokumentacija/pomocniAlgoritmi.tex
@@ -58,6 +58,8 @@ Sufiksno polje jest jednostavna stuktura podataka koje je sastavljena od niza ci
 
 Prije nego što se krene na objašnavanje samog algoritma potrebno je uvesti određenu terminologiju koju ćemo koristiti za objašnjenje postupaka ovog algoritma. Ulazni niz znakova ćemo označiti sa $S$. Neka je ulazni niz znakova duljine $n$, i neka je oznaka indeksiranja jednog elementa $S[i]$ pri ćemu je $i \in [0,n-1]$. Posljednja stvar koju je bitno napomenuti jest da znakovni niz mora obavezno završavati znakom koji je strogo manji od svih znakova u ostatku niza.  Definirat ćemo dvije različite vrste znakova, L-znakove i S-znakove. S-znak je onaj znak koji je manji od znaka koji dolazi neposredno iza njega (odnosno formalnije, ako gledamo i-ti znak onda mora vrijediti $S[i]<S[i+1]$) ili je jednak znaku koji se nalazi desno od njega i taj znak je S-znak (formalnije $S[i]=S[i+1]$ i $S[i+1]$ je L-znak). L-znak je onaj znak za koji vrijedi da je veći od znaka koji se nalazi desno od tog znaka (odnosno formalnije, ako gledamo i-ti znak onda mora vrijediti $S[i]<S[i+1]$) ili je jednak znaku koji se nalazi desno od njega i taj znak je L-znak (formalnije $S[i]=S[i+1]$ i $S[i+1]$ je L-znak). Iznimka od ovog pravila jest zadnji znak koji će uvijek biti definiran kao S-znak. Ovaj koncept možemo proširiti i na sufikse, pa reći da je S-sufiks sufiks koji počinje S-znakom i L-sufiks sufiks koji počinje L-znakom. Uvest ćemo još pojam LMS-znak i LMS-podniz. LMS-znak je S-znak kojemu se na lijevom mjestu nalazi L-znak, odnosno vrijedi $S[i]$ je S-znak i $S[i-1]$ je L-znak. LMS-podniz je niz koji započinje LMS-znakom i završava LMS-znakom, te se u njemu ne nalaze drugi LMS-znakovi. Primjer jednog ovako označenog niza može se vidjeti na slici \ref{fig:oznake}.
 
+\\
+
 \begin{figure}[h]
    \centering
        \includegraphics{./pictures/charactertypes.jpg}
@@ -69,7 +71,12 @@ Sada kada su uvedene osnovne oznake, možemo pojasniti samo ideju algoritma. Osn
 
 Prvo je potrebno svim znakovima odrediti jesu li to S-znakovi, L-znakovi ili LMS-znakovi. Nakon tog koraka slijedi postupak induciranog sortiranja. Definirajmo prvo inducirano sortiranje. To je postupak kojim ćemo iz LMS-sufiksa inducirati poredak L-sufiksa i potom S-sufiksa. Ovo je zapravo centralni i najvažniji dio algoritma. Za rad ovog algoritma potrebno nam je nekoliko struktura: ulazni niz, sufiksno polje, niz sa oznakama tipova znakova i pokazivaći na pretince. Sve strukture su već ranije spomenute i poznate, osim pokazivaća na pretince. Pretince ćemo zapravo definirati kao područja u nizu u kojima se nalaze sufiksi koji počinju s  istim početnim znakom. Broj pretinaca će dakle biti jednak veličini abecede (originalne abecede proširene s dodatnim znakom koji je manji od svih ostalih). Kada imamo sve te strukture možemo provesti postupak induciranog sortiranja. Postupak induciranog sortiranja se provodi kroz tri koraka opisanih u nastavku.
 
-Prije početka prvog koraka pretpostavimo da svi pokazivaći na pretince pokazuju na krajeve tih pretinaca, i neka su vrijednosti elemenata sufiksnog polja inicijalno postavljene na vrijednost 0. Prvi korak se sastoji od toga da prođemo kroz niz i da sve LMS-znakove stavimo u odgovarajući pretinac (smjer prolaska kroz niz je u potpunosti nebitan, može se prolaziti od početka ili od kraja niza). Kada stavimo LMS-znak u odgovarajući pretinac potrebno je pokazivač na taj pretinac smanjiti tako da pokazuje ne iduće prazno mjesto. Ovaj korak algoritma detaljno je prikazan na slici \ref{fig:sais1}
+Prije početka prvog koraka pretpostavimo da svi pokazivaći na pretince pokazuju na krajeve tih pretinaca, i neka su vrijednosti elemenata sufiksnog polja inicijalno postavljene na vrijednost 0. Prvi korak se sastoji od toga da prođemo kroz niz i da sve LMS-znakove stavimo u odgovarajući pretinac (smjer prolaska kroz niz je u potpunosti nebitan, može se prolaziti od početka ili od kraja niza). Kada stavimo LMS-znak u odgovarajući pretinac potrebno je pokazivač na taj pretinac smanjiti tako da pokazuje ne iduće prazno mjesto. Ovaj korak algoritma detaljno je prikazan na slici \ref{fig:sais1}.
+
+
+Prije početka drugog koraka potrebno je pokazivače postaviti na početke svih pretinaca. Drugi korak algoritma jest induciranje L-znakova. U ovom koraku prolazimo kroz sufiksno polje s lijeva na desno i za svaki element koji je veći od 0, dakle za elemente za koje vrijedi $SA[i]>0$. Svaki taj  element zapravo predstavlja indeks nekog znaka u ulaznom nizu. Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan L-znak. Mnogo jednostavnije rečeno  ispitujemo da li je znak $S[SA[i]]$ L-znak, pri ćemu je $i$ index elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak L-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i uvećamo pokazivač na taj pretinac. 
+
+
 
 \begin{figure}[H]
    \centering
@@ -78,7 +85,7 @@ Prije početka prvog koraka pretpostavimo da svi pokazivaći na pretince pokazuj
  \label{fig:sais1}
 \end{figure}
 
-Prije početka drugog koraka potrebno je pokazivače postaviti na početke svih pretinaca. Drugi korak algoritma jest induciranje L-znakova. U ovom koraku prolazimo kroz sufiksno polje s lijeva na desno i za svaki element koji je veći od 0, dakle za elemente za koje vrijedi $SA[i]>0$. Svaki taj  element zapravo predstavlja indeks nekog znaka u ulaznom nizu. Za svaki element iz sufiksnog polja ispitat ćemo da li je znak iz ulaznog niza koji se nalazi na poziciji koja je određena vrijednošću trenutnog elementa sufiksnog polja umanjenoj za jedan L-znak. Mnogo jednostavnije rečeno  ispitujemo da li je znak $S[SA[i]]$ L-znak, pri ćemu je $i$ index elementa sufiksnog polja na kojem se trenutno nalazimo. Ukoliko je taj znak L-znak, onda u pretinac koji predstavlja taj znak stavimo njegov indeks i uvećamo pokazivač na taj pretinac. 
+
 
 \begin{figure}[H]
    \centering
