--- a/documentation/LaTeX dokumentacija/testiranja.tex
+++ b/documentation/LaTeX dokumentacija/testiranja.tex
@@ -11,25 +11,30 @@ Pogledajmo prvo rezultate koji su dobiveni za datoteke koje su sadržavale nizov
 
 TABLICA NUKLEOTIDI
 
+
 \begin{table}[h]
 \caption{Testiranje na nizu nukleotida}
 \label{tbl:tablNukleotidi}
 \centering
 \begin{tabular}{c|c|c|c|}
 \cline{2-4}
-      	    					 & \multicolumn{3}{c|}{vrijeme izgradnje (s)}  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {veličina (MB)} & BWT & wavelet stablo & FM indeks  \\ \cline{1-4}  
-\multicolumn{1}{ |c| } {   1    } 		& 	0.4694	&	0.1431	&	0.6954	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   2    } 		& 	0.6427	&	0.1881	&	0.9581	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   5    } 		&	1.4017	&	0.3137	&	1.9724	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   10    } 	&	2.9828	&	0.5214	&	3.9738	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   20    } 	&	6.7284	&	0.9268	&	8.5542	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   50    } 	&	21.1193	&	3.5455	&	27.0914	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   100    } 	&	46.4439	&	6.2703	&	57.6676	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   200    } 	&	101.1712	&	11.9061	&	122.9448	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   500    } 	&	284.38207	&	29.0901	&	338.5938	\\ \cline{1-4}
+      	    					 & \multicolumn{3}{c|}{vrijeme izgradnje (s)}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} &	 BWT 	& wavelet stablo & FM indeks  \\ \hline 
+\multicolumn{1}{ |c| } {   1    } 		& 	0.4694	&	0.1431	&	0.6954	\\ \hline
+\multicolumn{1}{ |c| } {   2    } 		& 	0.6427	&	0.1881	&	0.9581	\\ \hline
+\multicolumn{1}{ |c| } {   5    } 		& 	1.4017	&	0.3137	&	1.9724	\\ \hline
+\multicolumn{1}{ |c| } {   10    } 	&	2.9828	&	0.5214	&	3.9738	\\ \hline
+\multicolumn{1}{ |c| } {   20    } 	&	6.7284	&	0.9268	&	8.5542	\\ \hline
+\multicolumn{1}{ |c| } {   50    } 	&	21.1193	&	3.5455	&	27.0914	\\ \hline
+\multicolumn{1}{ |c| } {   100    } 	&	46.4439	&	6.2703	&	57.6676	\\ \hline
+\multicolumn{1}{ |c| } {   200    } 	&	101.1712	&	11.9061	&	122.9448	\\ \hline
+\multicolumn{1}{ |c| } {   500    } 	&	284.38207	&	29.0901	&	338.5938	\\ \hline
 \end{tabular}
 \end{table}
+
+
+
+
 
 
 GRAF FMINDEX
@@ -48,17 +53,17 @@ U tablici \ref{tbl:tablProteini} prikazani su rezultati koji su dobiveni za dato
 \centering
 \begin{tabular}{c|c|c|c|}
 \cline{2-4}
-      	    					 & \multicolumn{3}{c|}{vrijeme izgradnje (s)}  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {veličina (MB)} & BWT & wavelet stablo & FM indeks  \\ \cline{1-4}  
-\multicolumn{1}{ |c| } {   1    } 		& 	0.4547	&	0.366	&	0.9295	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   2    } 		& 	0.6815	&	0.4119	&	1.2776	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   5    } 		& 	1.5011	&	0.5886	&	2.5025	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   10    } 	&	3.2401	&	0.8957	&	4.9289	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   20    } 	&	7.392		&	1.4896	&	10.4347	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   50    } 	&	24.1723	&	4.61334	&	32.6025	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   100    } 	&	52.6474	&	7.7732	&	67.9625	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   200    } 	&	112.8949	&	13.9333	&	142.1054	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   500    } 	&	315.5526	&	32.8476	&	386.6631	\\ \cline{1-4}
+      	    					 & \multicolumn{3}{c|}{vrijeme izgradnje (s)}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} &	 BWT 	& wavelet stablo & FM indeks  \\ \hline 
+\multicolumn{1}{ |c| } {   1    } 		& 	0.4547	&	0.366	&	0.9295	\\ \hline
+\multicolumn{1}{ |c| } {   2    } 		& 	0.6815	&	0.4119	&	1.2776	\\ \hline
+\multicolumn{1}{ |c| } {   5    } 		& 	1.5011	&	0.5886	&	2.5025	\\ \hline
+\multicolumn{1}{ |c| } {   10    } 	&	3.2401	&	0.8957	&	4.9289	\\ \hline
+\multicolumn{1}{ |c| } {   20    } 	&	7.392		&	1.4896	&	10.4347	\\ \hline
+\multicolumn{1}{ |c| } {   50    } 	&	24.1723	&	4.61334	&	32.6025	\\ \hline
+\multicolumn{1}{ |c| } {   100    } 	&	52.6474	&	7.7732	&	67.9625	\\ \hline
+\multicolumn{1}{ |c| } {   200    } 	&	112.8949	&	13.9333	&	142.1054	\\ \hline
+\multicolumn{1}{ |c| } {   500    } 	&	315.5526	&	32.8476	&	386.6631	\\ \hline
 \end{tabular}
 \end{table}
 
@@ -74,21 +79,62 @@ Konačno, u tablici \ref{tbl:tablRand} je prikazana i ovisnost izgradnje FM-Inde
 \centering
 \begin{tabular}{c|c|c|c|}
 \cline{2-4}
-      	    					 & \multicolumn{3}{c|}{vrijeme izgradnje (s)}  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {veličina (MB)} & BWT & wavelet stablo & FM indeks  \\ \cline{1-4}  
-\multicolumn{1}{ |c| } {   1    } 		& 	0.4795	&	1.2554	&	1.9021	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   2    } 		& 	0.772	&	1.3382	&	2.4216	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   5    } 		& 	1.8199	&	1.789	&	4.34387	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   10    } 		&	4.2868	&	2.579	&	8.3161	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   20    } 		&	10.2298	&	4.061	&	17.1314	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   50    } 		&	31.4606	&	8.3703	&	46.9771	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   100    } 		&	72.435	&	15.4384	&	103.1664	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   200    } 		&	163.362	&	29.5337	&	223.3576	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   500    } 		&	447.88	&	66.3437	&	588.4351	\\ \cline{1-4}
+      	    					 & \multicolumn{3}{c|}{vrijeme izgradnje (s)}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & 	BWT 		& wavelet stablo & FM indeks  \\ \hline  
+\multicolumn{1}{ |c| } {   1    } 		& 	0.4795	&	1.2554	&	1.9021	\\ \hline
+\multicolumn{1}{ |c| } {   2    } 		& 	0.772	&	1.3382	&	2.4216	\\ \hline
+\multicolumn{1}{ |c| } {   5    } 		& 	1.8199	&	1.789	&	4.34387	\\ \hline
+\multicolumn{1}{ |c| } {   10    } 	&	4.2868	&	2.579	&	8.3161	\\ \hline
+\multicolumn{1}{ |c| } {   20    } 	&	10.2298	&	4.061	&	17.1314	\\ \hline
+\multicolumn{1}{ |c| } {   50    } 	&	31.4606	&	8.3703	&	46.9771	\\ \hline
+\multicolumn{1}{ |c| } {   100    } 	&	72.435	&	15.4384	&	103.1664	\\ \hline
+\multicolumn{1}{ |c| } {   200    } 	&	163.362	&	29.5337	&	223.3576	\\ \hline
+\multicolumn{1}{ |c| } {   500    } 	&	447.88	&	66.3437	&	588.4351	\\ \hline
 \end{tabular}
 \end{table}
 
 
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_nukl.png}
+ \caption{Vremenska ovisnost trajanja algoritama o veličini datoteke koja sadrži nukleotide}
+ \label{fig:test_nukl}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_proteini.png}
+ \caption{Vremenska ovisnost trajanja algoritama o veličini datoteke koja sadrži proteine}
+ \label{fig:test_proteini}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_ascii.png}
+ \caption{Vremenska ovisnost trajanja algoritama o veličini datoteke koja sadrži ASCII znakove}
+ \label{fig:test_ascii}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_bwt.png}
+ \caption{Vremenska ovisnost trajanja BWT algoritma o veličini datoteke određenog tipa}
+ \label{fig:test_bwt}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_wavelet.png}
+ \caption{Vremenska ovisnost trajanja stvaranja wavelet stabla o veličini datoteke određenog tipa}
+ \label{fig:test_wavelet}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_fm.png}
+ \caption{Vremenska ovisnost trajanja stvaranja FM-indexa o veličini datoteke određenog tipa}
+ \label{fig:test_fm}
+\end{figure}
 
 
 
@@ -96,6 +142,85 @@ Konačno, u tablici \ref{tbl:tablRand} je prikazana i ovisnost izgradnje FM-Inde
 \section{Vrijeme obavljanja \textit{count} upita}
 
 Drugi važan parametar pomoću kojeg se može ocijeniti uspješnost implementacije FM-Indeksa jest obavljanje \textit{count} upita nad izgrađenim nizom. 
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_count.png}
+ \caption{Vremenska ovisnost izvršavanja \emph{count} algoritma o veličini niza koji se prebrojava}
+ \label{fig:test_count}
+\end{figure}
+
+
+
+\begin{table}[h]
+\caption{Count upit nad nizom nukleotida}
+\label{tbl:tablCountNukl}
+\centering
+\begin{tabular}{c|c|c|c|c|c|c|}
+\cline{2-7}
+							& \multicolumn{6}{|c|}{trajanje prebrojavanja (s)}  \\ \cline{2-7}  
+      	    					 	& \multicolumn{6}{c|}{duljina traženog niza}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & 100 & 200 & 300 & 400 & 500 & 1000	\\ \hline  
+\multicolumn{1}{ |c| } {   1    } 		& 2 	& 3 	 & 5	    & 7	 & 8	 & 17		\\ \hline
+\multicolumn{1}{ |c| } {   2    } 		& 2 	& 4	 & 5 	    & 7 	 & 7	 & 17 	\\ \hline
+\multicolumn{1}{ |c| } {   5    } 		& 2 	& 3	 & 5	    & 7	 & 7	 & 16		\\ \hline
+\multicolumn{1}{ |c| } {   10    } 	& 2 	& 3	 & 5	    & 7	 & 8	 & 16		\\ \hline
+\multicolumn{1}{ |c| } {   20    } 	& 1	& 4	 & 5	    & 7	 & 8	 & 16		\\ \hline
+\multicolumn{1}{ |c| } {   50    } 	& 2 	& 5	 & 7	    & 8	 & 10	 & 22		\\ \hline
+\multicolumn{1}{ |c| } {   100    }	& 2 	& 4	 & 7	    & 8	 & 10 & 22		\\ \hline  
+\multicolumn{1}{ |c| } {   200    }	& 2 	& 4	 & 7	    & 9	 & 9	 & 22		\\ \hline	
+\multicolumn{1}{ |c| } {   500    } 	& 3 	& 4	 & 7	    & 7 	& 10	 & 23		\\ \hline
+\end{tabular}
+\end{table}
+
+
+
+\begin{table}[h]
+\caption{Count upit nad proteinima}
+\label{tbl:tablCountProt}
+\centering
+\begin{tabular}{c|c|c|c|c|c|c|}
+\cline{2-7}
+							& \multicolumn{6}{|c|}{trajanje prebrojavanja (s)}  \\ \cline{2-7}  
+      	    					 	& \multicolumn{6}{c|}{duljina traženog niza}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & 100 & 200 & 300 & 400 & 500 & 1000	\\ \hline  
+\multicolumn{1}{ |c| } {   1    } 		& 3 	& 5    & 8	    & 9	& 9	 & 25		\\ \hline
+\multicolumn{1}{ |c| } {   2    } 		& 3 	& 5	 & 8	    & 8 	& 10	 & 24		\\ \hline
+\multicolumn{1}{ |c| } {   5    } 		& 3 	& 5	 & 7	    & 9	& 10	 & 23		\\ \hline
+\multicolumn{1}{ |c| } {   10    } 	& 2 	& 5	 & 7	    & 8	& 10	 & 23		\\ \hline
+\multicolumn{1}{ |c| } {   20    } 	& 2	& 5	 & 8	    & 9	& 11	 & 24		\\ \hline
+\multicolumn{1}{ |c| } {   50    } 	& 2 	& 6	 & 8	    & 9	& 11	 & 26		\\ \hline
+\multicolumn{1}{ |c| } {   100    }	& 2 	& 5	 & 9 	    & 9 	& 12	 & 24		\\ \hline  
+\multicolumn{1}{ |c| } {   200    }	& 3 	& 5	 & 8	    & 9 	& 11	 & 25		\\ \hline	
+\multicolumn{1}{ |c| } {   500    } 	& 3 	& 5	 & 7	    & 9	& 11	 & 24		\\ \hline
+\end{tabular}
+\end{table}
+
+
+\begin{table}[h]
+\caption{Count upit nad rand}
+\label{tbl:tablCountRand}
+\centering
+\begin{tabular}{c|c|c|c|c|c|c|}
+\cline{2-7}
+							& \multicolumn{6}{|c|}{trajanje prebrojavanja (s)}  \\ \cline{2-7}  
+      	    					 	& \multicolumn{6}{c|}{duljina traženog niza}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & 100 & 200 & 300 & 400 & 500 & 1000	\\ \hline 
+\multicolumn{1}{ |c| } {   1    } 		& 3 	& 8 	 & 11	    & 13	& 18	 & 34		\\ \hline
+\multicolumn{1}{ |c| } {   2    } 		& 4 	& 7	 & 11	    & 12 	& 18	 & 33		\\ \hline
+\multicolumn{1}{ |c| } {   5    } 		& 4 	& 7	 & 10	    & 12	& 19	 & 34		\\ \hline
+\multicolumn{1}{ |c| } {   10    } 	& 4 	& 8	 & 10	    & 13	& 19	 & 35		\\ \hline
+\multicolumn{1}{ |c| } {   20    } 	& 4	& 8	 & 10	    & 12	& 19	 & 35		\\ \hline
+\multicolumn{1}{ |c| } {   50    } 	& 4 	& 8	 & 11	    & 13 	& 19	 & 35		\\ \hline
+\multicolumn{1}{ |c| } {   100    }	& 4 	& 8	 & 11	    & 14	& 20	 & 36		\\ \hline
+\multicolumn{1}{ |c| } {   200    }	& 4 	& 8	 & 11	    & 13 	& 19	 & 38		\\ \hline
+\multicolumn{1}{ |c| } {   500    } 	& 4 	& 8	 & 11	    & 13 	& 20	 & 36		\\ \hline
+\end{tabular}
+\end{table}
+
+
+
+
 
 \section{Memorijsko zauzeće FM-indexa}
 
@@ -108,12 +233,12 @@ Posljednji parametar kojeg možemo promatrati tijekom izrade FM-indeksa jest mem
 \centering
 \begin{tabular}{c|c|c|c|}
 \cline{2-4}
-      	   & \multicolumn{3}{c|}{memorijsko zauzeće (MB)}  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {veličina (MB)} & maksimalno & pravo & konačno  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {   50   }		&	393	&	314	&	53	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {  100  }		&	803	&	620	&	103	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {  200  }		&	1553	&	1230	&	201	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {  500   } 	&	3830	&	3080	&	494	\\ \cline{1-4}
+      	   & \multicolumn{3}{c|}{memorijsko zauzeće (MB)}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & maksimalno & pravo & konačno  \\ \hline
+\multicolumn{1}{ |c| } {   50   }		&	393	&	314	&	53	\\ \hline
+\multicolumn{1}{ |c| } {  100  }		&	803	&	620	&	103	\\ \hline
+\multicolumn{1}{ |c| } {  200  }		&	1553	&	1230	&	201	\\ \hline
+\multicolumn{1}{ |c| } {  500   } 	&	3830	&	3080	&	494	\\ \hline
 \end{tabular}
 \end{table}
 
@@ -125,12 +250,12 @@ Posljednji parametar kojeg možemo promatrati tijekom izrade FM-indeksa jest mem
 \centering
 \begin{tabular}{c|c|c|c|}
 \cline{2-4}
-      	   & \multicolumn{3}{c|}{memorijsko zauzeće (MB)}  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {veličina (MB)} & maksimalno & pravo & konačno  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {   50   }		&	370	&	292	&	67	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   100   }		&	800	&	614	&	130	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   200   }		&	1550	&	1230	&	254	\\ \cline{1-4}
-\multicolumn{1}{ |c| } {   500   }		&	4800	&	3070	&	680	\\ \cline{1-4}
+      	   & \multicolumn{3}{c|}{memorijsko zauzeće (MB)}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & maksimalno & pravo & konačno  \\ \hline
+\multicolumn{1}{ |c| } {   50   }		&	370	&	292	&	67	\\ \hline
+\multicolumn{1}{ |c| } {   100   }	&	800	&	614	&	130	\\ \hline
+\multicolumn{1}{ |c| } {   200   }	&	1550	&	1230	&	254	\\ \hline
+\multicolumn{1}{ |c| } {   500   }	&	4800	&	3070	&	680	\\ \hline
 \end{tabular}
 \end{table}
 
@@ -140,14 +265,60 @@ Posljednji parametar kojeg možemo promatrati tijekom izrade FM-indeksa jest mem
 \label{tbl:tablMemRand}
 \centering\begin{tabular}{c|c|c|c|}
 \cline{2-4}
-      	   & \multicolumn{3}{c|}{memorijsko zauzeće (MB)}  \\ \cline{1-4}
-\multicolumn{1}{ |c| } {veličina (MB)} & maksimalno & pravo & konačno  \\ \cline{1-4}
+      	   & \multicolumn{3}{c|}{memorijsko zauzeće (MB)}  \\ \hline
+\multicolumn{1}{ |c| } {veličina (MB)} & maksimalno & pravo & konačno  \\ \hline
 \multicolumn{1}{ |c| } {   50   }		&	432	&	365	&	100	\\ \hline
-\multicolumn{1}{ |c| } {   100   }		&	800	&	619	&	191	\\ \hline
-\multicolumn{1}{ |c| } {   200   }		&	1558	&	1235	&	378	\\ \hline
-\multicolumn{1}{ |c| } {   500   }		&	4000	&	3700	&	840	\\ \hline
+\multicolumn{1}{ |c| } {   100   }	&	800	&	619	&	191	\\ \hline
+\multicolumn{1}{ |c| } {   200   }	&	1558	&	1235	&	378	\\ \hline
+\multicolumn{1}{ |c| } {   500   }	&	4000	&	3700	&	840	\\ \hline
 \end{tabular}
 \end{table}
+
+
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_mem_nukl.png}
+ \caption{Memorijska ovisnost stvaranja FM-indeksa algoritama o veličini datoteke koja sadrži nukleotide}
+ \label{fig:test_mem_nukl}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_mem_proteini.png}
+ \caption{Memorijska ovisnost stvaranja FM-indeksa algoritama o veličini datoteke koja sadrži proteine}
+ \label{fig:test_mem_proteini}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_mem_ascii.png}
+ \caption{Memorijska ovisnost stvaranja FM-indeksa algoritama o veličini datoteke koja sadrži ASCII znakove}
+ \label{fig:test_mem_ascii}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_mem_max.png}
+ \caption{Memorijska (maksimalna) ovisnost stvaranja FM-indeksa o veličini datoteke određenog tipa}
+ \label{fig:test_mem_max}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_mem_realmax.png}
+ \caption{Memorijska (realno maksimalna) ovisnost stvaranja FM-indeksa o veličini datoteke određenog tipa}
+ \label{fig:test_mem_realmax}
+\end{figure}
+
+\begin{figure}[h]
+   \centering
+       \includegraphics[width=\textwidth]{./pictures/test_mem_kon.png}
+ \caption{Memorijska (konačna) ovisnost stvaranja FM-indeksa o veličini datoteke određenog tipa}
+ \label{fig:test_mem_kon}
+\end{figure}
+
+
 
 
 Pogledajmo sada sliku \ref{profiler} koja je preuzeta iz profilera koje predstavlja memorijsko zauzeće algoritma kroz vrijeme. Plavom bojom označena je memorija koju program, odnsono algoritam stvarno koristi za spremanje struktura, dok je zelenom bojom označena slobodna memorija koju je Java virtualni stroj dodatno zauzeo. Vidimo da cijelo vrijeme Java virtualni stroj zauzima mnogo više memorije nego što mu doista treba za rad. To je ogroman nedostatak pri izradi memorijski zahtjevnih algoritama kao što je ovaj, jer Java programski jezik ne omogućuje efikasno rukovanje memorijom.
