--- a/documentation/LaTeX dokumentacija/literatura.bib
+++ b/documentation/LaTeX dokumentacija/literatura.bib
@@ -76,3 +76,19 @@
 	Title = {Opportunistic Data Structures with Applications},
 	Year = {2000}}
 
+@article{fm2,
+	Author = {Paolo Ferragina, Giovanni Manzini},
+	Date-Added = {2014-01-11 03:04:49 +0000},
+	Date-Modified = {2014-01-11 03:05:11 +0000},
+	Journal = {Journal of the ACM (JACM), Volume 52, Issue 4, July 2005},
+	Pages = {552-581},
+	Title = {Indexing Compressed Text},
+	Year = {2005}}
+
+@article{fm3,
+	Author = {Jochen Singer},
+	Date-Added = {2014-01-11 04:04:49 +0000},
+	Date-Modified = {2014-01-11 04:05:11 +0000},
+	Journal = {Freie Universitat Berlin - Bioinformatik, Master Thesis},
+	Title = {A Wavelet Tree Based FM-Index for Biological Sequences in SeqAn},
+	Year = {2012}}
